--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,19 @@
     
     .nav > .list .link.inline {
     color: var(--accent-color);
+    position: relative;
     }
     
+    .nav > .list .link.inline::after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        left: 0;
+        bottom: -1px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+    }
     /*contacts*/
     .contacts.list{
         display: flex;
@@ -185,6 +196,48 @@
         margin-right: 10px;
     }
 
+    .backdrop{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+       background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .backdrop.is-hidden{
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .modal{
+        position: absolute;
+        z-index: 999;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        min-height: 581px;
+        min-width: 528px;     
+        
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+        background-color: var(--logo-down-color);
+        border-radius: 4px;
+    }
+
+    .close{
+        min-width: 30px;
+        min-height: 30px;
+        padding: 0;
+        border: none;
+        margin-top: 8px;
+        margin-right: 8px;
+        
+        background-color: transparent;
+        background-image: url(../images/close.svg);
+    }
         /*Hero*/
     
     .hero {
@@ -237,16 +290,17 @@
     
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.88;
-    
-    
-    
+    line-height: 1.88;    
     }
     
     .button {
     cursor: pointer;
     }
-    
+    .hero .button:hover,
+    .hero .button:focus{
+        color: var(--accent-color);
+        background-color: var(--logo-down-color);
+    }
     /*Наші переваги*/
 
     .icon-box{
@@ -315,7 +369,30 @@
     .activity  .list > .item > img {
         display: block;
     }
-    
+
+    .activity .list > .item{
+        position: relative;
+    }
+    .activity .text{
+        position: absolute;
+        
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0;
+        padding-top: 27px;
+        padding-bottom: 27px;
+        
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        text-transform: uppercase;
+        
+        color: var(--logo-down-color);
+        background-color: rgba(47, 48, 58, 0.8);
+
+    }
     /*Команда*/
     
     .team {
@@ -542,6 +619,26 @@
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
+    .galerry-card-thumb{
+        position: relative;
+    }
+
+    .galerry-card-info{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 63px 24px;
+        background-color: rgba(33, 150, 243, 0.9);
+    }
+
+    .galerry-card-text{
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 1.56;
+        color: var(--primary-bg-color);
+    }
     /*footer*/
     
     .footer {
