--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,8 @@
     font-size: 14px;
     line-height: 1.4;
     letter-spacing: 0.02em;
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .nav > .list > .item:not(:last-child){
@@ -146,6 +148,8 @@
     .nav > .list .link:hover,
     .nav > .list .link:focus {
     color: var(--accent-color);
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .nav > .list .link.inline {
@@ -182,6 +186,9 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     --color2 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .contacts .link:hover,
@@ -190,6 +197,7 @@
     .contacts .icon:focus {
     color: var(--accent-color);
     --color2: var(--accent-color);
+    
     }
      
     .contacts .icon{
@@ -203,6 +211,8 @@
         width: 100%;
         height: 100%;
        background-color: rgba(0, 0, 0, 0.1);
+
+       opacity: 1;
     }
 
     .backdrop.is-hidden{
@@ -225,6 +235,8 @@
         align-items: flex-start;
         background-color: var(--logo-down-color);
         border-radius: 4px;
+
+        
     }
 
     .close{
@@ -291,6 +303,10 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;    
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     }
     
     .button {
@@ -461,6 +477,9 @@
         height: 44px;
         --color1: var(--logo-clients-color);
         border-radius: 50%;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .team .item:not(:last-child) {
@@ -476,6 +495,8 @@
         background-color:var(--accent-color);
         --color1: var(--secondary-bg-color);
 
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 
@@ -514,13 +535,17 @@
         --color1: var(--logo-clients-color);
         border: 1px solid var(--logo-clients-color);
         border-radius: 4px;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .list.clients-box .link:hover,
     .list.clients-box .link:focus{
         --color1: var(--accent-color);
         border-color: var(--accent-color);
-        
+     
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     /*Портфоліо*/
@@ -558,6 +583,9 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 1.63;
+         
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
     }
         .button-galerry:hover,
@@ -566,6 +594,9 @@
         background-color: var(--accent-color);
         cursor: pointer;
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     }
     
     /*Галерея*/
@@ -617,10 +648,13 @@
     .portfolio .galerry-card:hover,
     .portfolio .galerry-card:focus{
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .galerry-card-thumb{
         position: relative;
+        overflow: hidden;
     }
 
     .galerry-card-info{
@@ -631,7 +665,18 @@
         height: 100%;
         padding: 63px 24px;
         background-color: rgba(33, 150, 243, 0.9);
+
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     }
+
+    .galerry-card-thumb:hover .galerry-card-info,
+    .galerry-card-thumb:focus .galerry-card-info{
+
+        transform: translateY(0);
+    }
+
 
     .galerry-card-text{
         font-weight: 400;
@@ -680,11 +725,15 @@
     .list .link.maps {
     font-style: normal;
     color: var(--address-color);
+
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      }
         
      .link.contact {
     color: var(--address-secondary-color);
     font-style: normal;
+
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
             
     .footer  .logo{
@@ -729,6 +778,8 @@
         border-radius: 50%;
         background-color: var(--footet-link-bg);
         --color1: var(--address-color);
+
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
   .box-links .link:hover,
