--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@
     line-height: 1.4;
     letter-spacing: 0.02em;
 
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .nav > .list > .item:not(:last-child){
@@ -149,7 +149,7 @@
     .nav > .list .link:focus {
     color: var(--accent-color);
 
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     }
     
     .nav > .list .link.inline {
@@ -187,8 +187,8 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-     --color2 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
     }
     
     .contacts .link:hover,
@@ -196,12 +196,13 @@
     .contacts .icon:hover,
     .contacts .icon:focus {
     color: var(--accent-color);
-    --color2: var(--accent-color);
+    fill: var(--accent-color);
     
     }
      
     .contacts .icon{
         margin-right: 10px;
+        fill: currentColor;
     }
 
     .backdrop{
@@ -314,8 +315,8 @@
     }
     .hero .button:hover,
     .hero .button:focus{
-        color: var(--accent-color);
-        background-color: var(--logo-down-color);
+        color: var(--primary-bg-color);
+        background-color: rgba(24, 140, 232, 1);
     }
     /*Наші переваги*/
 
@@ -475,11 +476,12 @@
         justify-content: center;
         width: 44px;
         height: 44px;
-        --color1: var(--logo-clients-color);
+        fill: var(--logo-clients-color);
         border-radius: 50%;
 
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
+       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+       
     }
 
     .team .item:not(:last-child) {
@@ -493,10 +495,9 @@
     .name .link:hover,
     .name .link:focus{
         background-color:var(--accent-color);
-        --color1: var(--secondary-bg-color);
+        fill: var(--secondary-bg-color);
 
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
     }
 
 
@@ -545,7 +546,7 @@
         --color1: var(--accent-color);
         border-color: var(--accent-color);
      
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
     }
 
     /*Портфоліо*/
@@ -585,7 +586,7 @@
         line-height: 1.63;
          
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
     }
         .button-galerry:hover,
@@ -595,7 +596,7 @@
         cursor: pointer;
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
     
     }
     
@@ -649,7 +650,7 @@
     .portfolio .galerry-card:focus{
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
     }
 
     .galerry-card-thumb{
@@ -667,12 +668,12 @@
         background-color: rgba(33, 150, 243, 0.9);
 
         transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     }
 
-    .galerry-card-thumb:hover .galerry-card-info,
-    .galerry-card-thumb:focus .galerry-card-info{
+    .link:hover .galerry-card-info ,
+    .link:focus .galerry-card-info {
 
         transform: translateY(0);
     }
@@ -779,7 +780,7 @@
         background-color: var(--footet-link-bg);
         --color1: var(--address-color);
 
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
   .box-links .link:hover,
