--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@
     padding-bottom: 32px;
     
     color: var(--secondary-link-color);
+    fill: var(--secondary-link-color);
 
     font-weight: 500;
     font-size: 14px;
@@ -204,20 +205,23 @@
         margin-right: 10px;
         fill: currentColor;
     }
-
+        /*Modal-window*/
     .backdrop{
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-       background-color: rgba(0, 0, 0, 0.1);
+        background-color: rgba(0, 0, 0, 0.1);
 
        opacity: 1;
+
+       transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .backdrop.is-hidden{
         opacity: 0;
+        visibility: hidden;
         pointer-events: none;
     }
 
@@ -227,6 +231,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        
 
         min-height: 581px;
         min-width: 528px;     
@@ -236,9 +241,7 @@
         align-items: flex-start;
         background-color: var(--logo-down-color);
         border-radius: 4px;
-
-        
-    }
+       }
 
     .close{
         min-width: 30px;
@@ -250,6 +253,7 @@
         
         background-color: transparent;
         background-image: url(../images/close.svg);
+        cursor: pointer;
     }
         /*Hero*/
     
@@ -496,8 +500,6 @@
     .name .link:focus{
         background-color:var(--accent-color);
         fill: var(--secondary-bg-color);
-
-        
     }
 
 
@@ -533,17 +535,17 @@
         justify-content: center;
         width: 170px;
         height: 92px;
-        --color1: var(--logo-clients-color);
+        fill: var(--logo-clients-color);
         border: 1px solid var(--logo-clients-color);
         border-radius: 4px;
 
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        --color1 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
     }
     
     .list.clients-box .link:hover,
     .list.clients-box .link:focus{
-        --color1: var(--accent-color);
+        fill: var(--accent-color);
         border-color: var(--accent-color);
      
         
@@ -778,13 +780,14 @@
         height: 44px;
         border-radius: 50%;
         background-color: var(--footet-link-bg);
-        --color1: var(--address-color);
+        fill: var(--address-color);
 
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
   .box-links .link:hover,
   .box-links .link:focus{
     cursor: pointer;
     background-color: var(--accent-color);
+    fill:var(--address-color);
   }
