--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,9 @@
        opacity: 1;
 
        transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+
+       
     }
 
     .backdrop.is-hidden{
@@ -225,12 +228,16 @@
         pointer-events: none;
     }
 
+
+    .backdrop.is-hidden .modal{
+        transform: translate(-50%, -50%) scale(0.9);
+    }
     .modal{
         position: absolute;
         z-index: 999;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%) scale(1);
         
 
         min-height: 581px;
